--- a/src/0-system/0-introduction.stories.mdx
+++ b/src/0-system/0-introduction.stories.mdx
@@ -17,7 +17,7 @@ import LinkTo from "@storybook/addon-links/react";
 
 <div className="act-docs-container">
 	<Masthead />
-	<div className="act-flex act-flex-light-grey-gradient">
+	<div className="act-flex act-flex-light-purple">
 		<div className="act-flex__container act-flex__container-padding-trim">
 			<div className="act-flex__grid">
 				<div className="act-flex__row">
