--- a/src/2-design-tokens/0-overview.stories.mdx
+++ b/src/2-design-tokens/0-overview.stories.mdx
@@ -67,7 +67,10 @@ import LinkTo from "@storybook/addon-links/react";
 												<i class="fa-solid fa-left-right"></i>
 											</div>
 											<div class="act-card__title">Breakpoints</div>
-											<div class="act-card__description">Defined points where the design system responds according to the device width</div>
+											<div class="act-card__description">
+												Defined points where the design system responds
+												according to the device width
+											</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
@@ -84,7 +87,10 @@ import LinkTo from "@storybook/addon-links/react";
 												<i class="fa-solid fa-palette"></i>
 											</div>
 											<div class="act-card__title">Colours</div>
-											<div class="act-card__description">Colour plays an important role in creating a consistent and strong visual identify</div>
+											<div class="act-card__description">
+												Colour plays an important role in creating a consistent
+												and strong visual identify
+											</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
@@ -101,7 +107,10 @@ import LinkTo from "@storybook/addon-links/react";
 												<i class="fa-solid fa-person-walking"></i>
 											</div>
 											<div class="act-card__title">Interactions</div>
-											<div class="act-card__description">Bring the screen to life, guide users through experiences, and help move them forward</div>
+											<div class="act-card__description">
+												Bring the screen to life, guide users through
+												experiences, and help move them forward
+											</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
@@ -118,7 +127,10 @@ import LinkTo from "@storybook/addon-links/react";
 												<i class="fa-solid fa-circle"></i>
 											</div>
 											<div class="act-card__title">Radius</div>
-											<div class="act-card__description">Border-radius values to ensure a consistent shape of elements</div>
+											<div class="act-card__description">
+												Border-radius values to ensure a consistent shape of
+												elements
+											</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
@@ -135,7 +147,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<i class="fa-solid fa-sun"></i>
 											</div>
 											<div class="act-card__title">Shadows</div>
-											<div class="act-card__description">Box-shadow values to create depth within the interface</div>
+											<div class="act-card__description">
+												Box-shadow values to create depth within the interface
+											</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
@@ -152,7 +166,9 @@ import LinkTo from "@storybook/addon-links/react";
 												<i class="fa-solid fa-border-none"></i>
 											</div>
 											<div class="act-card__title">Spacing</div>
-											<div class="act-card__description">The consistent area between elements and components</div>
+											<div class="act-card__description">
+												The consistent area between elements and components
+											</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
@@ -169,7 +185,10 @@ import LinkTo from "@storybook/addon-links/react";
 												<i class="fa-solid fa-font"></i>
 											</div>
 											<div class="act-card__title">Typography</div>
-											<div class="act-card__description">Documentation and examples for typography within the design system</div>
+											<div class="act-card__description">
+												Documentation and examples for typography within the
+												design system
+											</div>
 											<div class="act-card__cta">
 												<i class="fa-solid fa-arrow-right"></i>
 											</div>
