--- a/src/0-system/ecosystem.stories.mdx
+++ b/src/0-system/ecosystem.stories.mdx
@@ -21,7 +21,7 @@ import LinkTo from "@storybook/addon-links/react";
 		<div className="act-flex__container act-flex__container-padding-trim">
 			<div className="act-flex__grid">
 				<div className="act-flex__row">
-					<div className="act-col act-col-sm-12">
+					<div className="act-col__cw-12">
 						<div className="act-box">
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
@@ -54,7 +54,7 @@ import LinkTo from "@storybook/addon-links/react";
 		<div className="act-flex__container">
 			<div className="act-flex__grid">
 				<div className="act-flex__row">
-					<div className="act-col act-col-sm-12">
+					<div className="act-col__cw-12">
 						<div className="act-box">
 							<h2>Introduction</h2>
 						</div>
