--- a/src/2-design-tokens/colours.stories.mdx
+++ b/src/2-design-tokens/colours.stories.mdx
@@ -21,7 +21,7 @@ import LinkTo from "@storybook/addon-links/react";
 		<div className="act-flex__container act-flex__container-padding-trim">
 			<div className="act-flex__grid">
 				<div className="act-flex__row">
-					<div className="act-col act-col-sm-12">
+					<div className="act-col__cw-12">
 						<div className="act-box">
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
@@ -62,7 +62,7 @@ import LinkTo from "@storybook/addon-links/react";
 		<div className="act-flex__container">
 			<div className="act-flex__grid">
 				<div className="act-flex__row">
-					<div className="act-col act-col-sm-12">
+					<div className="act-col__cw-12">
 						<div className="act-box">
 							<h2>Primary Colours</h2>
 							<ColorPalette>
@@ -286,7 +286,7 @@ import LinkTo from "@storybook/addon-links/react";
 		<div className="act-flex__container">
 			<div className="act-flex__grid">
 				<div className="act-flex__row">
-					<div className="act-col act-col-sm-12">
+					<div className="act-col__cw-12">
 						<div className="act-box">
 							<h2>Interface Colours</h2>
 							<ColorPalette>
@@ -390,7 +390,7 @@ import LinkTo from "@storybook/addon-links/react";
 		<div className="act-flex__container">
 			<div className="act-flex__grid">
 				<div className="act-flex__row">
-					<div className="act-col act-col-sm-12">
+					<div className="act-col__cw-12">
 						<div className="act-box">
 							<h3>Region Colours</h3>
 							<ColorPalette>
