--- a/src/2-design-tokens/typography.stories.mdx
+++ b/src/2-design-tokens/typography.stories.mdx
@@ -21,7 +21,7 @@ import LinkTo from "@storybook/addon-links/react";
 		<div className="act-flex__container act-flex__container-padding-trim">
 			<div className="act-flex__grid">
 				<div className="act-flex__row">
-					<div className="act-col act-col-sm-12">
+					<div className="act-col__cw-12">
 						<div className="act-box">
 							<div className="act-breadcrumbs">
 								<ul className="act-breadcrumbs__container">
@@ -62,7 +62,7 @@ import LinkTo from "@storybook/addon-links/react";
 		<div className="act-flex__container">
 			<div className="act-flex__grid">
 				<div className="act-flex__row">
-					<div className="act-col act-col-sm-12">
+					<div className="act-col__cw-12">
 						<div className="act-box">
 							<h2>Fonts</h2>
 							<p>
@@ -71,7 +71,7 @@ import LinkTo from "@storybook/addon-links/react";
 							</p>
 						</div>
 					</div>
-					<div className="act-col act-col-sm-6">
+					<div className="act-col__cw-6">
 						<div className="act-box">
 							<h3>Montserrat</h3>
 							<p style={{ fontFamily: "Montserrat" }}>
@@ -91,7 +91,7 @@ import LinkTo from "@storybook/addon-links/react";
 							</p>
 						</div>
 					</div>
-					<div className="act-col act-col-sm-6">
+					<div className="act-col__cw-6">
 						<div className="act-box">
 							<h3 style={{ fontFamily: "Source Sans Pro" }}>Source Sans Pro</h3>
 							<p style={{ fontFamily: "Source Sans Pro" }}>
@@ -111,7 +111,7 @@ import LinkTo from "@storybook/addon-links/react";
 							</p>
 						</div>
 					</div>
-					<div className="act-col act-col-sm-12">
+					<div className="act-col__cw-12">
 						<div className="act-box">
 							<div className="act-table-container">
 								<table className="act-table">
@@ -181,7 +181,7 @@ import LinkTo from "@storybook/addon-links/react";
 		<div className="act-flex__container">
 			<div className="act-flex__grid">
 				<div className="act-flex__row">
-					<div className="act-col act-col-sm-12">
+					<div className="act-col__cw-12">
 						<div className="act-box">
 							<h2>Headings</h2>
 							<div className="act-table-container">
@@ -372,7 +372,7 @@ import LinkTo from "@storybook/addon-links/react";
 		<div className="act-flex__container">
 			<div className="act-flex__grid">
 				<div className="act-flex__row">
-					<div className="act-col act-col-sm-12">
+					<div className="act-col__cw-12">
 						<div className="act-box">
 							<h2>Paragraphs</h2>
 							<div className="act-table-container">
