--- a/src/0-system/ecosystem.stories.mdx
+++ b/src/0-system/ecosystem.stories.mdx
@@ -56,7 +56,44 @@ import LinkTo from "@storybook/addon-links/react";
 				<div className="act-flex__row">
 					<div className="act-col__cw-12">
 						<div className="act-box">
-							<h2>Introduction</h2>
+							<div className="act-img">
+								<img
+									src="/images/0-system-stack-1.png"
+									alt="Illustration of the current project stack"
+								/>
+								<div className="act-img__description act-p-small">
+									<i class="fa-solid fa-circle-info"></i> Illustration of the current
+									project stack
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div className="act-flex__row">
+					<div className="act-col__cw-12">
+						<div className="act-box">
+							<h2>Notion</h2>
+						</div>
+					</div>
+				</div>
+				<div className="act-flex__row">
+					<div className="act-col__cw-12">
+						<div className="act-box">
+							<h2>Figma</h2>
+						</div>
+					</div>
+				</div>
+				<div className="act-flex__row">
+					<div className="act-col__cw-12">
+						<div className="act-box">
+							<h2>Storybook.js</h2>
+						</div>
+					</div>
+				</div>
+				<div className="act-flex__row">
+					<div className="act-col__cw-12">
+						<div className="act-box">
+							<h2>GitHub</h2>
 						</div>
 					</div>
 				</div>
