--- a/src/0-system/0-introduction.stories.mdx
+++ b/src/0-system/0-introduction.stories.mdx
@@ -43,7 +43,7 @@ import LinkTo from "@storybook/addon-links/react";
 									</li>
 								</ul>
 							</div>
-							<h1>ACT Government Design System</h1>
+							<h1>ACT Government Website Design System</h1>
 						</div>
 					</div>
 				</div>
