--- a/src/0-system/changelog.stories.mdx
+++ b/src/0-system/changelog.stories.mdx
@@ -56,7 +56,64 @@ import LinkTo from "@storybook/addon-links/react";
 				<div className="act-flex__row">
 					<div className="act-col__cw-12">
 						<div className="act-box">
-							<h2>Introduction</h2>
+							<div className="act-table-container">
+								<table className="act-table">
+									<thead>
+										<tr>
+											<th>Item</th>
+											<th>Value</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Version</td>
+											<td>
+												<img src="https://img.shields.io/github/package-json/v/pollen-digital/pollen-mirage?filename=mirage%2Fpackage.json&style=flat-square" />
+											</td>
+										</tr>
+										<tr>
+											<td>Commit activity</td>
+											<td>
+												<img src="https://img.shields.io/github/commit-activity/w/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+												<br />
+												<img src="https://img.shields.io/github/commit-activity/m/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+												<br />
+												<img src="https://img.shields.io/github/commit-activity/y/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+											</td>
+										</tr>
+										<tr>
+											<td>Last commit</td>
+											<td>
+												<img src="https://img.shields.io/github/last-commit/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+											</td>
+										</tr>
+										<tr>
+											<td>Contributors</td>
+											<td>
+												<img src="https://img.shields.io/github/contributors/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+											</td>
+										</tr>
+										<tr>
+											<td>Repo size</td>
+											<td>
+												<img src="https://img.shields.io/github/repo-size/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+											</td>
+										</tr>
+										<tr>
+											<td>Code size</td>
+											<td>
+												<img src="https://img.shields.io/github/languages/code-size/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+											</td>
+										</tr>
+										<tr>
+											<td>File count</td>
+											<td>
+												<img src="https://img.shields.io/github/directory-file-count/ACTGov-Design-System/ACTGov-Design-System?style=flat-square" />
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
 						</div>
 					</div>
 				</div>
